# rust-data-fetch

./: .gitignore  README.md
rust_data_fetch/: Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
rust_data_fetch/src/: api.ts  fetcher.rs  index.ts  lib.rs
